# CPP-PPP-Exercises

./: .gitignore  CMakeLists.txt  CMakePresets.json
Ch02/: CMakeLists.txt
Ch02/02/: CMakeLists.txt  main.cpp
Ch02/04/: CMakeLists.txt  main.cpp
Ch02/05/: CMakeLists.txt  main.cpp
Ch02/06/: CMakeLists.txt  main.cpp
Ch02/07/: CMakeLists.txt  main.cpp
Ch02/08/: CMakeLists.txt  main.cpp
Ch02/09/: CMakeLists.txt  main.cpp
Ch02/10/: CMakeLists.txt  main.cpp
Ch02/11/: CMakeLists.txt  main.cpp
Ch03/: CMakeLists.txt
Ch03/02/: CMakeLists.txt  main.cpp
Ch03/03/: CMakeLists.txt  main.cpp
Ch03/04/: CMakeLists.txt  main.cpp
Ch03/05/: CMakeLists.txt  main.cpp
Ch03/06/: CMakeLists.txt  main.cpp
Ch03/07/: CMakeLists.txt  main.cpp
Ch03/08/: CMakeLists.txt  main.cpp
Ch03/09/: CMakeLists.txt  main.cpp
Ch03/11/: CMakeLists.txt  main.cpp
Ch03/12/: CMakeLists.txt  main.cpp
Ch03/13/: CMakeLists.txt  main.cpp
Ch03/14/: CMakeLists.txt  main.cpp
Ch03/15/: CMakeLists.txt  main.cpp
Ch03/16/: CMakeLists.txt  main.cpp
Ch03/17/: CMakeLists.txt  main.cpp
Ch03/18/: CMakeLists.txt  main.cpp
Ch03/19/: CMakeLists.txt  main.cpp
Ch03/20/: CMakeLists.txt  main.cpp
Ch03/drill/: CMakeLists.txt  main.cpp
Ch04/: CMakeLists.txt
Ch04/02/: CMakeLists.txt  main.cpp
Ch04/03/: CMakeLists.txt  main.cpp
Ch04/04/: CMakeLists.txt  main.cpp
Ch04/05/: CMakeLists.txt  main.cpp
Ch04/06/: CMakeLists.txt  main.cpp
Ch04/07/: CMakeLists.txt  main.cpp
Ch04/08/: CMakeLists.txt  main.cpp
Ch04/09/: CMakeLists.txt
Ch04/10/: CMakeLists.txt  main.cpp
Ch04/11/: CMakeLists.txt  main.cpp
Ch04/12/: CMakeLists.txt  main.cpp
Ch04/13/: CMakeLists.txt  main.cpp
Ch04/14/: CMakeLists.txt  main.cpp
Ch05/: CMakeLists.txt
Ch05/02/: CMakeLists.txt  main.cpp
Ch05/03/: CMakeLists.txt  main.cpp
Ch05/04/: CMakeLists.txt  main.cpp
Ch05/05/: CMakeLists.txt  main.cpp
Ch05/06/: CMakeLists.txt  main.cpp
Ch05/07/: CMakeLists.txt  main.cpp
Ch05/08/: CMakeLists.txt  main.cpp
Ch06/: CMakeLists.txt
Ch06/01/: CMakeLists.txt  main.cpp
Ch06/02/: CMakeLists.txt  main.cpp
Ch06/03/: CMakeLists.txt  main.cpp
Ch06/04/: CMakeLists.txt  main.cpp
Ch06/05/: CMakeLists.txt  main.cpp
Ch06/06/: CMakeLists.txt  main.cpp
Ch06/07/: CMakeLists.txt  main.cpp
Ch06/08/: CMakeLists.txt  main.cpp
Ch06/09/: CMakeLists.txt  main.cpp
Ch06/10/: CMakeLists.txt  main.cpp
Ch06/12/: CMakeLists.txt  main.cpp
Ch07/: CMakeLists.txt
Ch07/01/: CMakeLists.txt  main.cpp
Ch07/02/: CMakeLists.txt  main.cpp
Ch07/03/: CMakeLists.txt  main.cpp
Ch07/04/: CMakeLists.txt  main.cpp
Ch07/05/: CMakeLists.txt  main.cpp
Ch07/06/: CMakeLists.txt  main.cpp
Ch07/07/: CMakeLists.txt  main.cpp
Ch07/08/: CMakeLists.txt  main.cpp
Ch07/09/: CMakeLists.txt  main.cpp
Ch07/10/: CMakeLists.txt  main.cpp
Ch07/11/: CMakeLists.txt  main.cpp
Ch07/12/: CMakeLists.txt  main.cpp
Ch07/13/: CMakeLists.txt  main.cpp
Ch08/: CMakeLists.txt
Ch08/02/: CMakeLists.txt  main.cpp
Ch08/03/: CMakeLists.txt  main.cpp
Ch08/04/: CMakeLists.txt  main.cpp
Ch08/05/: Book.ixx  CMakeLists.txt  Chrono.ixx  main.cpp
Ch08/06/: Book.ixx  CMakeLists.txt  main.cpp
Ch08/07/: Book.ixx  CMakeLists.txt  main.cpp
Ch08/08/: Book.ixx  CMakeLists.txt  main.cpp
Ch08/09/: CMakeLists.txt  Chrono.ixx  Library.ixx  Patron.ixx  main.cpp
Ch08/10/: CMakeLists.txt  Chrono.ixx  main.cpp
Ch08/11/: CMakeLists.txt  Chrono.ixx  main.cpp
Ch08/12/: CMakeLists.txt  Chrono.ixx  main.cpp
Ch08/13/: CMakeLists.txt  Rational.ixx  main.cpp
Ch09/: CMakeLists.txt
Ch09/19/: CMakeLists.txt  raw_temps.txt  reading.ixx  store_temps.cpp  temp_stats.cpp
Ch10/: CMakeLists.txt
Ch11/: CMakeLists.txt
Ch12/: CMakeLists.txt
Ch13/: CMakeLists.txt
Ch14/: CMakeLists.txt
Ch15/: CMakeLists.txt
Ch16/: CMakeLists.txt
(+239 files in other folders)
